--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+cache/v2/
+app/cache/v2/tmp/
+app/cache/v2/tmp/*
+
 # Logs
 logs
 *.log
@@ -57,3 +61,4 @@ typings/
 
 # dotenv environment variables file
 .env
+
